--- a/epl_game.ipynb
+++ b/epl_game.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# Analysis on English Premier League (2020-2022). \n",
-    "# Reference data is taken in from \"https://fbref.com/en/comps/9/Premier-League-Stats\"\n",
-    "# the infrormation is save in file \"matchs2.csv\" hand contain all the EPL matches between sesasn 2020-2022"
+    "Reference data is taken in from \"https://fbref.com/en/comps/9/Premier-League-Stats\"\n",
+    "the infrormation is save in file \"matchs2.csv\" hand contain all the EPL matches between sesasn 2020-2022"
    ]
   },
   {
@@ -57,8 +57,8 @@
    "metadata": {},
    "source": [
     "# Column explanation \n",
-    "date - match date \n",
-    "time - paly time\n",
+    "- date - match date \n",
+    "- time - paly time\n",
     "comp - competation \"Premier League, Euro League ect.\"\n",
     "round - league round \n",
     "day - match day\n",
