--- a/epl_game.ipynb
+++ b/epl_game.ipynb
@@ -59,26 +59,27 @@
     "# Column explanation \n",
     "- date - match date \n",
     "- time - paly time\n",
-    "comp - competation \"Premier League, Euro League ect.\"\n",
-    "round - league round \n",
-    "day - match day\n",
-    "venue - team playing  at (home/away)\n",
-    "result - matchs result\n",
-    "gf - goal for\n",
-    "ga - goal against\n",
-    "opponent - team play against\n",
-    "xg - Expeted goal\n",
-    "xga -Expeted goal against\n",
-    "poss - prossession (pass attemt in procent)\n",
-    "attendance\n",
-    "captain -  team captain\n",
-    "formation - team play formation\n",
-    "referee \n",
-    "match report - (just futher linkt, not need )\n",
-    "notes - -(just futher info, not need )\n",
+    "- comp - competation \"Premier League, Euro League ect.\"\n",
+    "- round - league round \n",
+    "- day - match day\n",
+    "- venue - team playing  at (home/away)\n",
+    "- result - matchs result\n",
+    "- gf - goal for\n",
+    "- ga - goal against\n",
+    "- opponent - team play against\n",
+    "- xg - Expeted goal\n",
+    "- xga -Expeted goal against\n",
+    "- poss - prossession (pass attemt in procent)\n",
+    "- attendance\n",
+    "- captain -  team captain\n",
+    "- formation - team play formation\n",
+    "- referee \n",
+    "- match report - (just futher linkt, not need )\n",
+    "- notes - -(just futher info, not need )\n",
+    "- team - team\n",
     "\n",
-    "sh,sot,dist,fk,pk,pkatt,season,\n",
-    "team - team\n"
+    "- sh,sot,dist,fk,pk,pkatt,season - (..)\n",
+    "\n"
    ]
   },
   {
