--- a/epl_game.ipynb
+++ b/epl_game.ipynb
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import depdelses\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -56,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Column explanation \n",
+    "# Task 2: Column explanation \n",
     "- date - match date \n",
     "- time - paly time\n",
     "- comp - competation \"Premier League, Euro League ect.\"\n",
@@ -83,9 +84,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task 3: intressting in the following column.\n",
+    "# team,venue,gf,ga, formation,opponent\n",
+    "# add it to new dataset \"gamedata\"\n",
+    "gamedata = eplmatches.loc[:,['date','team','venue','opponent','gf','ga','formation','result']]\n",
+    "gamedata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task 4: check data type.\n",
+    "gamedata.dtypes\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task 5:  gf and ge is datatype float, more appropriate if it were of datatype int \n",
+    "# convert float to int\n",
+    "# convert date to pd datetime\n",
+    "# Add new col with converted venue as int (0 = away, 1 = home )\n",
+    "# Add new col with converted formation\n",
+    "# ¨as int (0 = away, 1 = home )# Add new col with converted opponent as int (0 = away, 1 = home )\n",
+    "\n",
+    "gamedata['date'] = pd.to_datetime(gamedata['date'])\n",
+    "gamedata['gf'] = gamedata['gf'].astype(int)\n",
+    "gamedata['ga'] = gamedata['ga'].astype(int)\n",
+    "gamedata['venue_code'] = gamedata['venue'].astype(\"category\").cat.codes\n",
+    "gamedata['opponent_code'] = gamedata['opponent'].astype(\"category\").cat.codes\n",
+    "gamedata['formation_code'] = gamedata['formation'].astype(\"category\").cat.codes\n",
+    "\n",
+    "gamedata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task 6: pandas detemed if any column is null\n",
+    "# (all tyhe colum,e contain data)\n",
+    "gamedata.isnull().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Task 7:\n",
+    "This type of dataset is known and the relationship between the columns is traceable.\n",
+    "Relationship between column gf and ga determed the outcom of result\n",
+    "(gf - ga) > 0 = W else L"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 8: \n",
+    " Yes my dataset if not complet. is just contain the EPL seson 2020-2022 and Epl startad at 1992. So there are more data infrmation if need. \n",
+    " \n",
+    "\n",
+    " Premier League formed in 1992, and moste of the broker and static firme shuold have the information on all the mactches since 1992. \n",
+    " It's possible to get date infromation from all the seson from 1992-2022. Easys way is to pay the broker or static comapine to access ther data scource.\n",
+    " More work if for  manuellt creaping data from webb sit. "
+   ]
   }
  ],
  "metadata": {
